<resources>
    <string name="app_name">My Application</string>
    <string name="my_first_application">My first application</string>
    <string name="mile">mile</string>
    <string name="km">km</string>
    <string name="mile_to_km">Mile to Km</string>
    <string name="km_to_mile">Km to Mile</string>
    <string name="convert_units">Convert units</string>
    <string name="play_sound_2">Play sound 2</string>
    <string name="play_sound_1">Play sound 1</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="location">Location</string>
    <string name="download">Download</string>
    <string name="web">Web</string>
</resources>
